--- a/packages/ui/src/components/time-picker/demos/4.Range.md
+++ b/packages/ui/src/components/time-picker/demos/4.Range.md
@@ -16,6 +16,23 @@ Enable range selection via `dRange`.
 import { DTimePicker } from '@react-devui/ui';
 
 export default function Demo() {
-  return <DTimePicker dRange dClearable />;
+  return (
+    <>
+      <DTimePicker dRange dClearable />
+      <h5>Limit hour</h5>
+      <DTimePicker
+        dRange
+        dClearable
+        dConfigOptions={(unit, value, position, current) => {
+          if (unit === 'hour') {
+            const anotherDate = current[position === 'start' ? 1 : 0];
+            if (anotherDate) {
+              return { disabled: Math.abs(anotherDate.getHours() - value) > 2 };
+            }
+          }
+        }}
+      />
+    </>
+  );
 }
 ```
